# soloG

g1/: package-lock.json  package.json  server.js
g10/: celery_app.py  main.py  requirements.txt  test_retry_fix.py  test_snapshot_resume.py
g11/: CMakeLists.txt  README.md  test_api.py  test_rollup_websocket.py  test_tenant_isolation.py
g11/include/tsdb/: types.h
g11/include/tsdb/api/: http_handler.h
g11/include/tsdb/auth/: jwt_auth.h
g11/include/tsdb/config/: config.h
g11/include/tsdb/downsampling/: downsampler.h
g11/include/tsdb/index/: tag_index.h
g11/include/tsdb/query/: query_engine.h
g11/include/tsdb/rollup/: rollup_engine.h
g11/include/tsdb/storage/: rocksdb_engine.h
g11/include/tsdb/utils/: serializer.h  time_utils.h
g11/include/tsdb/websocket/: data_subscription.h
g11/src/: main.cpp
g11/src/api/: http_handler.cpp
g11/src/auth/: jwt_auth.cpp
g11/src/config/: config.cpp
g11/src/downsampling/: downsampler.cpp
g11/src/index/: tag_index.cpp
g11/src/query/: query_engine.cpp
g11/src/rollup/: rollup_engine.cpp
g11/src/storage/: rocksdb_engine.cpp
g11/src/utils/: serializer.cpp  time_utils.cpp
g11/src/websocket/: data_subscription.cpp
g12/: README.md  export_presets.cfg  project.godot
g13/: .gitignore  package-lock.json  package.json  pocketbase_schema.json  (+1 more)
g14/: .pre-commit-hooks.yaml  README.md  code-review-config.yaml  pyproject.toml
g14/examples/: .pre-commit-config-example.yaml  bad_code.py
g14/hooks/: pre-commit
g14/reports/: report.json  report.md  test_report.md
g14/scripts/: install-pre-commit.ps1
g14/src/code_review/: __init__.py  analyzer.py  cli.py  fixer.py  llm_client.py  reporter.py  rules.py  scanner.py
g14/src/code_review_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
g14/tests/: test_fix.py  test_integration.py  test_json_extraction.py
(+149 files in other folders)
